--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ psycopg2==2.6.2
 dj-database-url==0.4.1
 gunicorn==19.6.0
 whitenoise==3.2
+django-storages==1.4.1
 django-model-utils==2.5
 feedparser==5.2.1
 Pillow==3.3.0
