--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - "3.5"
 install: "pip install -r requirements.txt"
-script: py.test --cov=apps --cov=python_ru tests
+script: py.test --flake8 --cov=apps --cov=python_ru
 after_success:
   - bash <(curl -s https://codecov.io/bash)
