--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,12 @@
+[tox]
+envlist = py35
+skipsdist=true
+
+[testenv]
+commands =
+    pip install -r requirements.txt
+    py.test --flake8 --cov=apps --cov=python_ru
+
 [pytest]
 DJANGO_SETTINGS_MODULE=python_ru.settings
 flake8-max-line-length = 120
