--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = py35
-skipsdist=true
+skipsdist = true
 
 [testenv]
 commands =
@@ -8,7 +8,7 @@ commands =
     py.test --flake8 --cov=apps --cov=python_ru
 
 [pytest]
-DJANGO_SETTINGS_MODULE=python_ru.settings
+DJANGO_SETTINGS_MODULE = python_ru.settings
 flake8-max-line-length = 120
 flake8-ignore =
     */migrations/* E501
