--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ python:
   - "3.5"
 install: "pip install -r requirements.txt"
 script: py.test --flake8 --cov=apps --cov=python_ru
-after_success:
+after_script:
   - bash <(curl -s https://codecov.io/bash)
