Moved to Django 2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-Django==1.9.8
-psycopg2==2.6.2
-dj-database-url==0.4.1
-gunicorn==19.6.0
-whitenoise==3.2
-django-model-utils==2.5
+Django==2.0.1
+psycopg2==2.7.3.2
+dj-database-url==0.4.2
+gunicorn==19.7.1
+whitenoise==3.3.1
+django-model-utils==3.0.0
 feedparser==5.2.1
 Pillow==4.0.0
-python-dateutil==2.5.3
-lxml==3.6.1
-bleach==1.4.3
-html5lib==0.9999999
-requests==2.10.0
-codecov==2.0.5
-pytest_django==2.9.1
-pytest-cov==2.3.0
-factory_boy==2.7.0
-vcrpy==1.9.0
-pytest-flake8==0.6
-pytz==2016.6.1
+python-dateutil==2.6.1
+lxml==4.1.1
+bleach==2.1.2
+html5lib==1.0.1
+requests==2.18.4
+codecov==2.0.12
+pytest_django==3.1.2
+pytest-cov==2.5.1
+factory_boy==2.9.2
+vcrpy==1.11.1
+pytest-flake8==0.9.1
+pytz==2017.3
 readability-api==1.0.2
-Faker==0.7.7
+Faker==0.8.8
