--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,22 @@
-attrs==17.4.0
-bleach==1.4.3
-certifi==2017.11.5
-chardet==3.0.4
-codecov==2.0.5
-coverage==4.4.2
+Django==1.9.8
+psycopg2==2.6.2
 dj-database-url==0.4.1
-Django==2.0.1
-django-ckeditor==5.4.0
-django-js-asset==0.1.1
-django-model-utils==2.5
-factory-boy==2.7.0
-fake-factory==9999.9.9
-Faker==0.7.7
-feedparser==5.2.1
-flake8==3.5.0
 gunicorn==19.6.0
-html5lib==0.9999999
-httplib2==0.9.1
-idna==2.6
-lxml==3.6.1
-mccabe==0.6.1
-oauthlib==2.0.6
-Pillow==5.0.0
-pluggy==0.6.0
-py==1.5.2
-pycodestyle==2.3.1
-pyflakes==1.6.0
-pytest==3.3.2
-pytest-cov==2.3.0
-pytest-django==2.9.1
-pytest-flake8==0.6
-python-dateutil==2.6.1
-pytz==2017.3
-PyYAML==3.12
-readability-api==1.0.2
-requests==2.18.4
-requests-oauthlib==0.8.0
-six==1.11.0
-urllib3==1.22
-vcrpy==1.9.0
 whitenoise==3.2
-wrapt==1.10.11
-python-decouple==3.1
+django-model-utils==2.5
+feedparser==5.2.1
+Pillow==4.0.0
+python-dateutil==2.5.3
+lxml==3.6.1
+bleach==1.4.3
+html5lib==0.9999999
+requests==2.10.0
+codecov==2.0.5
+pytest_django==2.9.1
+pytest-cov==2.3.0
+factory_boy==2.7.0
+vcrpy==1.9.0
+pytest-flake8==0.6
+pytz==2016.6.1
+readability-api==1.0.2
+Faker==0.7.7
