--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ chardet==3.0.4
 codecov==2.0.5
 coverage==4.4.2
 dj-database-url==0.4.1
-Django==2.0.1
+Django==2.0.*
 django-ckeditor==5.4.0
 django-js-asset==0.1.1
 django-model-utils==2.5
