--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+ansicolors==1.1.8
+asn1crypto==0.24.0
 attrs==17.4.0
+bcrypt==3.1.4
 bleach==1.4.3
 certifi==2017.11.5
+cffi==1.11.5
 chardet==3.0.4
 codecov==2.0.5
 coverage==4.4.2
+cryptography==2.1.4
 dj-database-url==0.4.1
-Django==2.0.*
+Django==2.0.1
 django-ckeditor==5.4.0
 django-js-asset==0.1.1
 django-model-utils==2.5
+Fabric3==1.14.post1
 factory-boy==2.7.0
 fake-factory==9999.9.9
 Faker==0.7.7
@@ -21,16 +27,21 @@ idna==2.6
 lxml==3.6.1
 mccabe==0.6.1
 oauthlib==2.0.6
+paramiko==2.4.0
 Pillow==5.0.0
 pluggy==0.6.0
 py==1.5.2
+pyasn1==0.4.2
 pycodestyle==2.3.1
+pycparser==2.18
 pyflakes==1.6.0
+PyNaCl==1.2.1
 pytest==3.3.2
 pytest-cov==2.3.0
 pytest-django==2.9.1
 pytest-flake8==0.6
 python-dateutil==2.6.1
+python-decouple==3.1
 pytz==2017.3
 PyYAML==3.12
 readability-api==1.0.2
@@ -41,4 +52,3 @@ urllib3==1.22
 vcrpy==1.9.0
 whitenoise==3.2
 wrapt==1.10.11
-python-decouple==3.1
