--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cffi==1.11.5
 chardet==3.0.4
 codecov==2.0.5
 coverage==4.4.2
-cryptography==2.1.4
+cryptography~>2.3
 dj-database-url==0.4.1
 Django==2.0.1
 django-ckeditor==5.4.0
@@ -27,7 +27,7 @@ idna==2.6
 lxml==3.6.1
 mccabe==0.6.1
 oauthlib==2.0.6
-paramiko==2.4.0
+paramiko==2.4.*
 Pillow==5.0.0
 pluggy==0.6.0
 py==1.5.2
