Fixed dockerimage building

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cffi==1.11.5
 chardet==3.0.4
 codecov==2.0.5
 coverage==4.4.2
-cryptography~>2.3
+cryptography==2.3.*
 dj-database-url==0.4.1
 Django==2.0.1
 django-ckeditor==5.4.0
