--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ attrs==17.4.0
 bcrypt==3.1.4
 bleach==1.4.3
 certifi==2017.11.5
-cffi==1.11.5
+cffi==1.14.4
 chardet==3.0.4
 codecov==2.0.5
 coverage==4.4.2
 cryptography==2.3.*
 dj-database-url==0.4.1
-Django==2.0.1
+Django==2.0.13
 django-ckeditor==5.4.0
 django-js-asset==0.1.1
 django-model-utils==2.5
@@ -20,16 +20,16 @@ fake-factory==9999.9.9
 Faker==0.7.7
 feedparser==5.2.1
 flake8==3.5.0
-gunicorn==19.6.0
 html5lib==0.9999999
 httplib2==0.9.1
 idna==2.6
-lxml==3.6.1
+lxml==4.6.2
 mccabe==0.6.1
 oauthlib==2.0.6
 paramiko==2.4.*
 Pillow==5.1.0
 pluggy==0.6.0
+psycopg2-binary==2.8.6 
 py==1.5.2
 pyasn1==0.4.2
 pycodestyle==2.3.1
